# ddemon

./: .gitmodules  CMakeLists.txt  README.md  android.sh  install_android.sh  run.sh  run_wobu.sh  start_nvim_project.sh  valgrind.sup
assets/: atlas.fs  atlas.vs  default.fs  default.vs  line.fs  line.vs  primitive.fs  primitive.vs  sdf.fs
src/: arena.c  arena.h  assets.c  assets.h  atlas.c  atlas.h  components.h  core.c  core.h  ddemon.c  ddemon.h  ecs.c  ecs.h  list.c  list.h  main.c  pool.c  pool.h  queue.c  queue.h  txt.c  txt.h  ui.c  ui.h
src/wobu/: CMakeLists.txt  app.c  app.h  map.c  map.h  menu.c  menu.h  nk.h  pick.c  pick.h  prop.c  prop.h  properties.c  properties.h  status.c  status.h  tools.c  tools.h  util.c  util.h  window_status.c  window_tileset.c  windows.h  wobu.c  work.c  work.h
